force-app/main/default/objects/VOI_Detail__c/VOI_Detail__c.object-meta.xml
<CustomObject>
    <label>VOI Detail</label>
    <nameField>
        <displayFormat>VOIDT-{00000}</displayFormat>
        <label>VOI Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOI Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>