force-app/main/default/objects/VOI_Detail__c/fields/Code_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Code_Match_Status__c</fullName>
    <label>Code Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Match(Success)</fullName>
            </value>
            <value>
                <fullName>Not-Match(Failed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>