force-app/main/default/objects/VOI_Detail__c/fields/Code_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Code_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code Not Required</label>
    <type>Checkbox</type>
</CustomField>