force-app/main/default/objects/VOI_Detail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VOI Details</relationshipLabel>
    <relationshipName>VOI_Details</relationshipName>
    <type>Lookup</type>
</CustomField>