force-app/main/default/objects/VOI_Detail__c/fields/Date_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_submitted__c</fullName>
    <label>Date submitted</label>
    <type>TextArea</type>
</CustomField>