force-app/main/default/objects/VOI_Detail__c/fields/flag__c.field-meta.xml
<CustomField>
    <fullName>flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>flag</label>
    <type>Checkbox</type>
</CustomField>