force-app/main/default/objects/VOI_Detail__c/fields/Identity_Certified_By__c.field-meta.xml
<CustomField>
    <fullName>Identity_Certified_By__c</fullName>
    <formula>IF(ISBLANK(verified_by__c) , $User.FirstName + &apos; &apos; + $User.MiddleName + &apos; &apos; + $User.LastName, verified_by__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identity Certified By</label>
    <type>Text</type>
</CustomField>