force-app/main/default/objects/VOI_Detail__c/fields/Identity_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verification_Status__c</fullName>
    <label>Identity Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not-Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>