force-app/main/default/objects/VOI_Detail__c/fields/matchVerification__c.field-meta.xml
<CustomField>
    <fullName>matchVerification__c</fullName>
    <formula>IF(ISPICKVAL(Code_Match_Status__c, &apos;Not-Match(Failed)&apos;), &apos;Not required&apos;, &apos;Verified&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>matchVerification</label>
    <type>Text</type>
</CustomField>