force-app/main/default/objects/VOI_Detail__c/fields/Secure_Code__c.field-meta.xml
<CustomField>
    <fullName>Secure_Code__c</fullName>
    <label>Secure Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>