force-app/main/default/objects/VOI_Detail__c/fields/Secure_Code_Orignal__c.field-meta.xml
<CustomField>
    <fullName>Secure_Code_Orignal__c</fullName>
    <label>Secure Code Orignal</label>
    <length>7</length>
    <type>Text</type>
</CustomField>