force-app/main/default/objects/VOI_Detail__c/fields/verified_by__c.field-meta.xml
<CustomField>
    <fullName>verified_by__c</fullName>
    <label>verified by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>