force-app/main/default/objects/VOI_Detail__c/fields/verified_by_selfie_ID__c.field-meta.xml
<CustomField>
    <fullName>verified_by_selfie_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>verified by selfie ID</label>
    <type>Checkbox</type>
</CustomField>