force-app/main/default/objects/VOI_Detail__c/fields/Video_and_Photo_ID_of_the_same_person__c.field-meta.xml
<CustomField>
    <fullName>Video_and_Photo_ID_of_the_same_person__c</fullName>
    <label>Video and Photo ID of the same person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facial match (success)</fullName>
            </value>
            <value>
                <fullName>Not facial match (failed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>