force-app/main/default/objects/VOI_Detail__c/fields/Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Video_Link__c</fullName>
    <label>Video Link</label>
    <type>TextArea</type>
</CustomField>