force-app/main/default/objects/VOI_Detail__c/fields/VOI_Type__c.field-meta.xml
<CustomField>
    <fullName>VOI_Type__c</fullName>
    <label>VOI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL</fullName>
            </value>
            <value>
                <fullName>VOI</fullName>
            </value>
            <value>
                <fullName>E-SIGN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>