force-app/main/default/objects/VOI_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Date_submitted__c</columns>
    <columns>VOI_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>